# projectGenisis

./: .gitignore  Modelfile  README.md  config.py  inspect_brain.py  main.py  pyproject.toml  test_memory.py
core/: perception.py  tools.py  wakeup.py
memory/: episodic.py  sleep.py
